# nirs4all-papers

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSING.md  LICENSING_FR.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  content-check.yml  publish.yml  site.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
docs/: REPRODUCTION_PUBLISHER.md  backlog.md
papers/: README.md
papers/2026-pls-nirs-demo/: model.n4a  paper.yaml  replay.json
src/nirs4all_papers/: __init__.py  bibliography.py  bundle.py  cli.py  model.py  provenance.py  provider.py
src/nirs4all_papers/data/: bibliography.json  paper_template.yaml
src/nirs4all_papers/site/: __init__.py  assets.py  charts.py  components.py  escape.py  pages.py  theme.py
templates/: paper.yaml
templates/reproducibility-kit/: README.md
tests/: __init__.py  conftest.py  test_assets.py  test_bibliography.py  test_build.py  test_bundle.py  test_escape.py  test_model.py  test_provenance.py  test_provider_api.py  test_replay_js.py
